--- a/index.html
+++ b/index.html
@@ -1,1 +1,135 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+ 
+<link rel="stylesheet"   href="style.css" >
+  
+</head>
+   
+<body>
+
+<div id="NotAllowedme">
+ <div id="jd-main"> 
+ <div id="jd-content-1">
+ <div id="jd-content-2"> 
+ <div class="jd-app"> 
+ <div class="jd-container"> 
+ <div class="jd-aside"> 
+ <div class="jd-box-avatar"> <img src="https://xatimg.com/image/pY2yuAFOs4f3.png" /> </div>  
+ <h2>zeroounikat1234</h2> ID 1487881352 
+ <p> <br />
+ <br />
+ <span style="color:#0057FF"> </span></p> 
+ </div> 
+ <div class="jd-section"> 
+ <div class="jd-header"> 
+ <h1>Dobro došli u moj xatspace!</h1> 
+ <p>radim botove,slike za nik i slike za chat </p> <a href="href"></a>
+ <div class="jd-nav"> <a href="#jd-content-1"> Gif 4D</a><a href="https://xat.me#jd-content-2"></a> </div> 
+ <div class="jd-block"> 
+ <div class="jd-col-left">
+
+   ------------------------------------------------------------------Bt--------------------------------------------------------------
+  <div name="bt 1" class="jd-box-gif">
+ <img src="https://i.ibb.co/6wr4ZmL/ezgif-4-0d8bd7e8cd.gif" />
+ </div>
+
+ <div name="bt 2" class="jd-box-gif">
+ <img src="https://i.ibb.co/pvZ19c4/ezgif-4-177c3abbb2.gif" />
+ </div>
+
+ <div name="bt 3" class="jd-box-gif">
+ <img src="https://i.ibb.co/vBPRcqz/ezgif-4-fdab772f5d.gif" />
+ </div>
+
+ <div name="bt 4" class="jd-box-gif">
+ <img src="https://i.ibb.co/dfjKdHP/ezgif-4-f08ac428ff.gif" />
+ </div>
+
+ <div name="bt 5" class="jd-box-gif">
+ <img src="https://i.ibb.co/x1ks49P/ezgif-4-222dc85d61.gif" />
+ </div>
+
+ <div name="bt 6" class="jd-box-gif">
+ <img src="https://i.ibb.co/JzwjVsn/ezgif-4-6dad8cf832.gif" />
+ </div>
+
+ <div name="bt 7" class="jd-box-gif">
+ <img src="https://i.ibb.co/Nmkpggg/ezgif-4-5f87651a22.gif" />
+ </div>
+
+ <div name="bt 8" class="jd-box-gif">
+ <img src="https://i.ibb.co/JyKK9CH/ezgif-4-0240fa601e.gif" />
+ </div>
+
+ <div name="bt 9" class="jd-box-gif">
+ <img src="https://i.ibb.co/k0ZQyhm/ezgif-4-b65c9c6e70.gif" />
+ </div>
+
+ <div name="bt 10" class="jd-box-gif">
+ <img src="https://i.ibb.co/6Nqv3Q7/ezgif-4-226dcf7be6.gif" />
+ </div>
+
+ <div name="bt 11" class="jd-box-gif">
+ <img src="https://i.ibb.co/D4H9g08/ezgif-1-22766bae5b.gif" />
+ </div>
+
+ <div name="bt 12" class="jd-box-gif">
+ <img src="https://i.ibb.co/N684WQ0/ezgif-1-38d6e44be8.gif" />
+ </div>
+
+ <div name="bt 13" class="jd-box-gif">
+ <img src="https://i.ibb.co/F3tGSdH/ezgif-5-3745a0ecc8.gif" />
+ </div>
+
+ <div name="bt 14" class="jd-box-gif">
+ <img src="https://i.ibb.co/VBY7kK4/ezgif-5-1b24e2a682.gif" />
+ </div>
+
+ <div name="bt 15" class="jd-box-gif">
+ <img src="https://i.ibb.co/JkQY7vC/ezgif-5-e05e02d0eb.gif" />
+ </div>
+
+ <div name="bt 16" class="jd-box-gif">
+ <img src="https://i.ibb.co/H26kKNg/ezgif-5-e83d4abb53.gif" />
+ </div>
+
+ <div name="bt 17" class="jd-box-gif">
+ <img src="https://i.ibb.co/fqyy6LQ/ezgif-5-0b444dd381.gif" />
+ </div>
+
+ <div name="bt 18" class="jd-box-gif">
+ <img src="https://i.ibb.co/FBskKVq/ezgif-2-3f456fcbd5.gif" />
+ </div>
+
+ <div name="bt 19" class="jd-box-gif">
+ <img src="https://i.ibb.co/7G6xwQT/ezgif-2-7a7a10d8a4.gif" />
+ </div>
+
+ <div name="bt 20" class="jd-box-gif">
+ <img src="https://i.ibb.co/0cRD1Dp/ezgif-2-f421ca64f7.gif" />
+ </div>
+
+ <div name="bt 21" class="jd-box-gif">
+ <img src="https://i.ibb.co/z5wCq6K/ezgif-2-a12ec9da29.gif" />
+ </div>
+
+ <div name="bt 22" class="jd-box-gif">
+ <img src="https://i.ibb.co/Xp4K2k8/ezgif-2-43529d6473.gif" />
+ </div>
+
+ <div name="bt 23" class="jd-box-gif">
+ <img src="https://i.ibb.co/6rFyv65/ezgif-2-f56a057925.gif" />
+ </div>
+
+
+
+
+
+
+
+ </body>
+</html>
+
+
